hide access errors when starting JavaFX from the command line.